@@ -94,27 +94,33 @@
 /*
 	pmk.conf keys
 */
-#define PREMAKE_KEY_OSNAME	"OS_NAME"
-#define PREMAKE_KEY_OSVERS	"OS_VERSION"
-#define PREMAKE_KEY_OSARCH	"OS_ARCH"
 
+/* OBSOLETE */
 #define PREMAKE_KEY_BINPATH	"BIN_PATH"
-#define PREMAKE_KEY_BIN_AR	"BIN_AR"
-#define PREMAKE_KEY_BIN_CAT	"BIN_CAT"
-#define PREMAKE_KEY_BIN_CXX	"BIN_CXX"
-#define PREMAKE_KEY_BIN_GREP	"BIN_GREP"
-#define PREMAKE_KEY_BIN_INSTALL	"BIN_INSTALL"
-#define PREMAKE_KEY_BIN_RANLIB	"BIN_RANLIB"
-
 #define PREMAKE_KEY_INCPATH	"INC_PATH"
-
 #define PREMAKE_KEY_LIBPATH	"LIB_PATH"
 
-#define PREMAKE_KEY_BYTEORDER	"HW_BYTEORDER"
+/* new key names */
+#define PMKCONF_BIN_AR		"BIN_AR"
+#define PMKCONF_BIN_CAT		"BIN_CAT"
+#define PMKCONF_BIN_CXX		"BIN_CXX"
+#define PMKCONF_BIN_GREP	"BIN_GREP"
+#define PMKCONF_BIN_INSTALL	"BIN_INSTALL"
+#define PMKCONF_BIN_RANLIB	"BIN_RANLIB"
 
-#define PREMAKE_KEY_SYSCONFDIR	"SYSCONFDIR"
+#define PMKCONF_HW_BYTEORDER	"HW_BYTEORDER"
 
-#define PREMAKE_KEY_PREFIX	"PREFIX"
+#define PMKCONF_PATH_BIN	"PATH_BIN"
+#define PMKCONF_PATH_INCPATH	"PATH_INC"
+#define PMKCONF_PATH_LIBPATH	"PATH_LIB"
+
+#define PMKCONF_OS_NAME		"OS_NAME"
+#define PMKCONF_OS_VERS		"OS_VERSION"
+#define PMKCONF_OS_ARCH		"OS_ARCH"
+
+#define PMKCONF_MISC_SYSCONFDIR	"SYSCONFDIR"
+#define PMKCONF_MISC_PREFIX	"PREFIX"
+
 
 /* prefix character used for comments */
 #define CHAR_COMMENT		'#'
