@@ -2,6 +2,6 @@
 # override file example
 
 # do you like Clarke and Kubrik ?
-OS_NAME=HAL
-OS_VERSION=9000
-OS_ARCH=discovery
+OS_NAME="HAL"
+OS_VERSION="9000"
+OS_ARCH="discovery"
